fix: resolve incorrect data set when paginate